--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,4 +51,9 @@
     <string name="label_level_fmt">等级 Lv%1$d</string>
     <string name="label_exp_fmt">经验 %1$s</string>
     <string name="action_logout">退出登录</string>
+
+    <string name="disclaimer_title">使用协议</string>
+    <string name="disclaimer_accept">接受并继续</string>
+    <string name="disclaimer_exit">退出</string>
+    <string name="disclaimer_message">若要继续使用该应用需接受以下协议：\n\n本应用仅供学习交流使用，禁止用于其他用途。\n\n请在安装后的24小时内将本应用从设备中卸载，并且把APK安装文件删除。</string>
 </resources>
