--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,4 +65,5 @@
     <string name="disclaimer_message">若要继续使用该应用需接受以下协议：\n\n本应用仅供学习交流使用，禁止用于其他用途。\n\n请在安装后的24小时内将本应用从设备中卸载，并且把APK安装文件删除。</string>
 
     <string name="player_btn_subtitle">字幕</string>
+    <string name="player_btn_playlist">播放列表</string>
 </resources>
